# goph420-w2024-lab01-stSL

./: README.md  pyproject.toml
examples/: driver_probability.py  driver_seismic.py
src/goph420_lab01/: integration.py
tests/: test_gauss_legendre.py  test_newton.py  test_newton_cotes.py
